--- a/_includes/product-styles.html
+++ b/_includes/product-styles.html
@@ -2,7 +2,11 @@
 	{% for style in include.product.styles %}
 		<div class="style" data-item-id="{{ forloop.index }}" {% unless forloop.first %}style="display: none"{% endunless %}>
 			<a href="{{ include.product.url }}">
-				<img src="{{ site.baseurl }}{{ style.image }}">
+				<img
+					src="{{ site.baseurl }}{{ style.image }}"
+					sizes="(min-width: 1180px) 320px, (min-width: 1020px) 26vw, (min-width: 680px) 40vw, (max-width: 679px) 100vw"
+					width="1000" height="1000"
+					>
 			</a>
 		</div>
 	{% endfor %}
