--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,14 +78,13 @@
 						<p><a href="tel:{{ site.author.phone }}">{{ site.author.phone }}</a></p>
 
 						<div class="social-icons">
-							<a class="facebook" href="https://facebook.com/cloudcannon/">{% include social-icon.html icon="Facebook2" %}</a>
-							<a class="twitter" href="https://twitter.com/cloudcannon/">{% include social-icon.html icon="Twitter" %}</a>
-							<a class="youtube" href="https://youtube.com/c/cloudcannon/">{% include social-icon.html icon="YouTube" %}</a>
-							<a class="linkedin" href="https://nz.linkedin.com/company/cloud-cannon">{% include social-icon.html icon="LinkedIn" %}</a>
+							<a class="twitter" href="https://twitter.com/simonhearne/">{% include social-icon.html icon="Twitter" %}</a>
+							<a class="youtube" href="https://www.youtube.com/channel/UCrxj8bnb1pMK9aYK5lI85KQ">{% include social-icon.html icon="YouTube" %}</a>
+							<a class="linkedin" href="https://www.linkedin.com/in/simonhearne/">{% include social-icon.html icon="LinkedIn" %}</a>
 						</div>
 					</li>
 				</ul>
-				<p class="copyright">All Rights Reserved &copy; {{ site.time | date: '%Y' }} {{ site.title }}, Inc. Template by <a href="https://cloudcannon.com">CloudCannon</a></p>
+				<p class="copyright">All Rights Reserved &copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
 			</div>
 		</footer>
 		<script>
@@ -93,7 +92,22 @@
 				document.body.classList.toggle("nav-open");
 				return false;
 			};
+			let els = document.querySelectorAll(".style-picker > div");
+			for (let el of els) {
+				el.addEventListener("click",e => {
+					let el = e.currentTarget;
+					let id = el.dataset.itemId;
+					let parent = el.parentElement.parentElement;
+					let children = parent.querySelectorAll('.style');
+					for (let child of children) {
+						if (child.dataset.itemId === id) {
+							child.style.display = 'block';
+						} else {
+							child.style.display = 'none';
+						}
+					}
+				})
+			}
 		</script>
-		<script src="{{ site.baseurl }}/js/application.js" type="text/javascript"></script>
 	</body>
 </html>
