--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,9 @@
 					{% endif %}
 				</div>
 			</section>
+			<section class="weather" style="padding:0">
+				<iframe style="border:0;width:100%;height:300px;" src="https://simonhearne.webperf.ninja/hello"></iframe>
+			</section>
 		</header>
 		{{ content }}
 		<footer>
