--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -14,7 +14,7 @@
 
 header {
 	color: #fff;
-	padding: 20px 0 59px 0;
+	padding-top: 20px;
 	background: linear-gradient(135deg, $brand-color 0%, $brand-color-2 100%);
 	position: relative;
 
