--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 				</div>
 			</section>
 			<section class="weather" style="padding:0">
-				<iframe style="border:0;width:100%;height:300px;" src="/hello"></iframe>
+				<iframe style="border:0;width:100%;height:200px;background-color:rgba(128,0,128,0.2);" src="/hello"></iframe>
 			</section>
 		</header>
 		{{ content }}
